changes to html overflow mode in sub 1300px, the .details div now center correctly sub1300px, split the codes into two files

--- a/css/introduction.css
+++ b/css/introduction.css
@@ -5,6 +5,16 @@
     border-radius: 0px;
 }
 
+#intro_container
+{
+    position: absolute;
+    top: 10%;
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    height: 90%;
+}
+
 .details
 {
     position: absolute;
@@ -14,19 +24,21 @@
     opacity: 0;
     box-shadow: 0 2px rgb(255, 255, 255);
     border-radius: 5px 5px 0 0;
+    
 }
 
 #infoTess
 {
     background-color: rgba(248, 214, 61, 0.8);
-    left: 7.5%; 
+    left: 7.5%;
+    margin: 0 auto;
 }
 
 #infoHung
 {
     right: 7.5%;
     background-color: rgba(152, 210, 243, 0.856);
-    /* top: 180%; */
+    margin: 0 auto;
 }
 
 .avatar
@@ -144,49 +156,11 @@
 .generalInfo2:nth-of-type(2){top: 20%;}
 .generalInfo2:nth-of-type(3){top: 26%;}
 
-#HappyBirthday
-{
-    position: absolute;
-    margin: 0;
-    /* width: 40%;
-    height: 10%; */
-    background:transparent;
-    transform: scale(0);
-    transition: 0.8s ease;
-    color: white;
-    text-align: center;
-    font-size: 50px;
-    top: 40%;
-    left: 45%;
-    opacity: 0;
-}
 
-#HPBD_message
+@media screen and (max-width: 1300px)
 {
-    position: absolute;
-    margin: 0;
-    /* width: 60%; */
-    /* height: 10%; */
-    background: transparent;
-    transform: scale(0);
-    transition: 0.8s ease;
-    color: white;
-    text-align: center;
-    font-size: 30px;
-    top: 60%;
-    left: 23%;
-    opacity: 0;
-}
-
-#bdayTess
-{
-    transition: 0.3s ease;
-    opacity: 0;
-    /* background-color: blue; */
-}
-
-
-@media screen and (max-width: 700px)
-{
+    html{overflow: auto;}
     .details{width: 420px;}
+    #infoTess{left: auto;}
+    #infoHung{right: auto;}
 }
